// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<NewUserAvatar /> should render correctly 1`] = `
<Avatar
  alt="Pablo Escobar"
  name="Pablo Escobar"
  src="https://monAvatarWow.com"
/>
`;

exports[`<NewUserAvatar /> should render correctly when no avatar 1`] = `
<Avatar
  alt="Pablo Escobar"
  name="Pablo Escobar"
/>
`;
